--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -13,38 +13,38 @@
     </header>
     <nav id="navPrincipal">
         <ul id="login">
-            <li><a href="#">log in</a></li>
-            <li><a href="#">sing up</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">log in</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">sing up</a></li>
         </ul>
         <ul id="pags">
-            <li><a href="#">about</a></li>
-            <li><a href="#">projects</a></li>
-            <li><a href="#">people</a></li>
-            <li><a href="#">festival</a></li>
-            <li><a href="#">donate</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">about</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">projects</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">people</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">festival</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">donate</a></li>
         </ul>
     </nav>
     <div id="subtitulo">Drumbeat Learning, Freedom and the Web Festival</div>
     <nav id="navSec">
         <ul id="subpag">
-            <li><a href="#">Festival</a></li>
-            <li><a href="#">Program</a></li>
-            <li><a href="#">Participants</a></li>
-            <li><a href="#">Registration</a></li>
-            <li><a href="#">Logistics</a></li>
-            <li><a href="#">Get involved</a></li>
-            <li><a href="#">Wiki</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Festival</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Program</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Participants</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Registration</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Logistics</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Get involved</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">Wiki</a></li>
         </ul>
     </nav>
     <div id="idioma">
         <ul>language:
-            <li><a href="#">en</a></li>
-            <li><a href="#">ca</a></li>
-            <li><a href="#">es</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">en</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">ca</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">es</a></li>
         </ul>
     </div>
     <div id="program">
-        <div id="foto"><img src="../recursos/img/program.png" alt=""></div>
+        <div id="circo"><img src="../recursos/img/program.png" alt=""></div>
         <h1>Program</h1>
         <p><span>Imagine a folk festival with many different tents</span>- tents for all different sorts of music, a tent where you learn how to fiddle, and maybe one where you make drums. Each has its focus. People move from tent to tent maing up their
             own experience.</p>
@@ -56,33 +56,35 @@
         <div id="botonReg" onclick="">
             <p>Register</p>
         </div>
-        <p>or find out how to <a href="#">get more involved</a></p>
+        <p>or find out how to <a href="https://foundation.mozilla.org/es/">get more involved</a></p>
     </div>
 
     <div class="caix" id="how">
         <dl>
             <dt><img src="../recursos/img/benefit_p2pu.png" alt=""></dt>
-            <dd> Learn how to organize a <span>Peer 2 Peer University</span> course.
-            </dd>
+            <dd> Learn how to organize a <span>Peer 2 Peer University</span> course.</dd>
             <dt><img src="../recursos/img/benefit_creds.png" alt=""></dt>
-            <dd></dd>Help build a <a href="#">'digital backpack'</a> to track credentials for online learners.</dd>
+            <dd>Help build a <span>'digital backpack'</span> to track credentials for online learners.</dd>
             <dt><img src="../recursos/img/benefit_hackbus.png" alt=""></dt>
-            <dd></dd>Convert a public square into a learning lab with the <a href="#">Hackbus</a>.</dd>
+            <dd>Convert a public square into a learning lab with the <span>Hackbus</span>.</dd>
             <dt><img src="../recursos/img/benefit_teaching.png" alt=""></dt>
-            <dd></dd>Trade ideas about <a href="#">teaching the open web</a>,
-            </dd>
+            <dd>Trade ideas about <span>teaching the open web</span>.</dd>
+            <dt><img src="../recursos/img/benefit_hack.png" alt=""></dt>
+            <dd>Share <span>best practices</span> for open web hackers.</dd>
+            <dt><img src="../recursos/img/benefit_wikipedia.png" alt=""></dt>
+            <dd>Integrate <span>Wikipedia</span> into your learning project.</dd>
         </dl>
     </div>
 
     <div id="about">
         <h2>What's it all about?</h2>
         <p>The open nature of the internet is revolutionizing how we learn. Mozilla's 2010 Drumbeat Festival will gather teachers, learners and technologists from around the world who are at the heart of this revolution. Join us in Barcelona for three days
-            of making, teaching, hacking inventing and shaping the future of education and the web. <a href="#">learn more</a></p>
+            of making, teaching, hacking inventing and shaping the future of education and the web. <a href="https://foundation.mozilla.org/es/">learn more</a></p>
     </div>
     <div id="schedule">
         <h2>Schedule</h2>
-        <p>Want to know exactly wht's going to happen? You can see the <a href="#">draft schedule</a> here <a href="#">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of sessions will give you a feel for what's
-            going to happen. You can also read the <a href="#">activities
+        <p>Want to know exactly wht's going to happen? You can see the <a href="https://foundation.mozilla.org/es/">draft schedule</a> here <a href="https://foundation.mozilla.org/es/">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of sessions will give you a feel for what's
+            going to happen. You can also read the <a href="https://foundation.mozilla.org/es/">activities
                 page</a> on the wiki for more detailed information.</p>
     </div>
 
@@ -94,67 +96,67 @@
         <div class="caix">
             <div id="caja01">
                 <h2>Badge lab</h2>
-                <p>Test, critique and improve badges and tools that recognize informal online learning. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+                <p>Test, critique and improve badges and tools that recognize informal online learning. Hosted by <a href="https://foundation.mozilla.org/es/">P2PU</a>. <a href="https://foundation.mozilla.org/es/">Mozilla</a> and <a href="https://foundation.mozilla.org/es/">Remix Learning</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja02">
                 <h2>Webcraft toolshed</h2>
-                <p>Get your hands dirty testing and improving standars-bases web developer courses. Hosted by <a href="#">P2PU</a>. <a href="#">Mozilla</a> and <a href="#">Remix Learning</a>.</p>
+                <p>Get your hands dirty testing and improving standars-bases web developer courses. Hosted by <a href="https://foundation.mozilla.org/es/">P2PU</a>. <a href="https://foundation.mozilla.org/es/">Mozilla</a> and <a href="https://foundation.mozilla.org/es/">Remix Learning</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja03">
                 <h2>Peer-learning fishbowl</h2>
-                <p>Provide feedback on peer-to-peer courses under development and chart new courses. Hosted by <a href="#">Peer 2 Peer University</a>.</p>
+                <p>Provide feedback on peer-to-peer courses under development and chart new courses. Hosted by <a href="https://foundation.mozilla.org/es/">Peer 2 Peer University</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja04">
                 <h2>Local learning incubator</h2>
-                <p>Help librarians and communitu arganizers produce new open web learning content. Hosted by <a href="#">You Media Chicago</a>.</p>
+                <p>Help librarians and communitu arganizers produce new open web learning content. Hosted by <a href="https://foundation.mozilla.org/es/">You Media Chicago</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja05">
                 <h2>Open content studio</h2>
-                <p>Hack on open textbooks and help build a global courseware catalog. Hosted by <a href="#">Flat World
-                        Knowledge</a>, <a href="#">OCW Consortium</a>, <a href="#">Creative Commons</a> and <a href="#">Connexions</a>.</p>
+                <p>Hack on open textbooks and help build a global courseware catalog. Hosted by <a href="https://foundation.mozilla.org/es/">Flat World
+                        Knowledge</a>, <a href="https://foundation.mozilla.org/es/">OCW Consortium</a>, <a href="https://foundation.mozilla.org/es/">Creative Commons</a> and <a href="https://foundation.mozilla.org/es/">Connexions</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja06">
                 <h2>Hackerspace playground</h2>
-                <p>Learn how to make teach with processing.js, Arduino, a MakerBot and other cool toys. Hosted by <a href="#">Monochrom</a> and <a href="#">Arduino.cc</a>.</p>
+                <p>Learn how to make teach with processing.js, Arduino, a MakerBot and other cool toys. Hosted by <a href="https://foundation.mozilla.org/es/">Monochrom</a> and <a href="https://foundation.mozilla.org/es/">Arduino.cc</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja07">
                 <h2>Wikipedia lounge</h2>
-                <p>Pitch in on projects that fuse Wikipedia into the world of learning and education. Hosted by <a href="#">Wikimedia Foundation</a> and <a href="#">Wikimedia in Catalan</a>.</p>
+                <p>Pitch in on projects that fuse Wikipedia into the world of learning and education. Hosted by <a href="https://foundation.mozilla.org/es/">Wikimedia Foundation</a> and <a href="https://foundation.mozilla.org/es/">Wikimedia in Catalan</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja08">
                 <h2>Open source classrooms</h2>
-                <p>Convert open source projects into teaching resource in your classroom. Hosted by: <a href="#">Free
-                        Knowledge Institute</a> and <a href="#">Seneca College</a>.</p>
+                <p>Convert open source projects into teaching resource in your classroom. Hosted by: <a href="https://foundation.mozilla.org/es/">Free
+                        Knowledge Institute</a> and <a href="https://foundation.mozilla.org/es/">Seneca College</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja09">
                 <h2>Video + learning gallery</h2>
-                <p>Make, translate and share online videos with a bent for learning. Hosted by: <a href="#">Open Video
-                        Alliance</a>, <a href="#">Mozilla</a> and <a href="#">Participatory Culture Foundation</a>.</p>
+                <p>Make, translate and share online videos with a bent for learning. Hosted by: <a href="https://foundation.mozilla.org/es/">Open Video
+                        Alliance</a>, <a href="https://foundation.mozilla.org/es/">Mozilla</a> and <a href="https://foundation.mozilla.org/es/">Participatory Culture Foundation</a>.</p>
             </div>
         </div>
         <div class="caix">
             <div id="caja10">
                 <h2>Main stage</h2>
-                <p>Demons and report-backs from across the Drumbeat Festival as well as a small number of mind-bending keynotes. Hosted by <a href="#">Mozilla</a>.</p>
+                <p>Demons and report-backs from across the Drumbeat Festival as well as a small number of mind-bending keynotes. Hosted by <a href="https://foundation.mozilla.org/es/">Mozilla</a>.</p>
             </div>
         </div>
-        <p> You'll find a full list of activities confirmed and proposed for Drumbeat Festival spaces on the <a href="#">activities wiki page</a>.</p>
+        <p> You'll find a full list of activities confirmed and proposed for Drumbeat Festival spaces on the <a href="https://foundation.mozilla.org/es/">activities wiki page</a>.</p>
         <h1>In Partnership With</h1>
     </div>
 
@@ -169,16 +171,34 @@
             <li>Radical librarians</li>
             <li>Wikipedians</li>
             <li>Open education start ups</li>
-            <li><a href="#">And, of course, teachers and learners of all stripes</a></li>
+            <li><a href="https://foundation.mozilla.org/es/">And, of course, teachers and learners of all stripes</a></li>
         </ul>
-        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="#">OpenEd2010</a> which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details in the coming weeks.</p>
+        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="https://foundation.mozilla.org/es/">OpenEd2010</a> which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details in the coming weeks.</p>
     </div>
     <div class="caix" id="tweet">
-        <div></div>
-        <div></div>
+        <div id="identica">
+            <img src="../recursos/img/identica.png" alt="">
+            <p>Share on Identica.es</p>
+        </div>
+        <div id="twitter">
+            <img src="../recursos/img/twitter.png" alt="">
+            <p>Tweet this</p>
+        </div>
     </div>
 
     <footer>
+        <div>
+            <img src="../recursos/img/icono/rss.jpg" alt="">
+            <p>Drumbeat Blog (RSS feed)</p>
+        </div>
+        <div>
+            <ul>
+                
+            </ul>
+        </div>
+        <div></div>
+        <div></div>
+
 
     </footer>
 </body>
