--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -192,13 +192,28 @@
             <p>Drumbeat Blog (RSS feed)</p>
         </div>
         <div>
-            <ul>
-                
+            <ul id="redes">
+                <li id="tw">Twitter</li>
+                <li id="fcb">Facebook</li>
+                <li id="flc">Flickr</li>
             </ul>
         </div>
-        <div></div>
-        <div></div>
-
+        <div>
+            <ul>
+                <li>File a bug</li>
+                <li>Drumbeat wiki</li>
+                <li>Join the newsgroup</li>
+                <li>Join the weekly call</li>
+            </ul>
+        </div>
+        <div>
+            <img src="../recursos/img/icono/mozilla.jpg" alt="">
+            <p>Mozilla.org</p>
+            <p>Privacy policy</p>
+        </div>
+        <div>
+            <p>Portion of this content are ""c""2010 by individual drumbeat.org contributors. Content available under a <span>Creative Commons license</span>.</p>
+        </div>
 
     </footer>
 </body>
