--- a/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
+++ b/Interfaces/evaluables/PR02_Lopez_Garcia_Sergio/html/principal.html
@@ -63,14 +63,19 @@
         <dl>
             <dt><img src="../recursos/img/benefit_p2pu.png" alt=""></dt>
             <dd> Learn how to organize a <span>Peer 2 Peer University</span> course.</dd>
+
             <dt><img src="../recursos/img/benefit_creds.png" alt=""></dt>
             <dd>Help build a <span>'digital backpack'</span> to track credentials for online learners.</dd>
+
             <dt><img src="../recursos/img/benefit_hackbus.png" alt=""></dt>
             <dd>Convert a public square into a learning lab with the <span>Hackbus</span>.</dd>
+
             <dt><img src="../recursos/img/benefit_teaching.png" alt=""></dt>
             <dd>Trade ideas about <span>teaching the open web</span>.</dd>
+
             <dt><img src="../recursos/img/benefit_hack.png" alt=""></dt>
             <dd>Share <span>best practices</span> for open web hackers.</dd>
+
             <dt><img src="../recursos/img/benefit_wikipedia.png" alt=""></dt>
             <dd>Integrate <span>Wikipedia</span> into your learning project.</dd>
         </dl>
@@ -83,8 +88,8 @@
     </div>
     <div id="schedule">
         <h2>Schedule</h2>
-        <p>Want to know exactly wht's going to happen? You can see the <a href="https://foundation.mozilla.org/es/">draft schedule</a> here <a href="https://foundation.mozilla.org/es/">on the Festival wiki.</a> We're still evolving the details - but the general thems and style of sessions will give you a feel for what's
-            going to happen. You can also read the <a href="https://foundation.mozilla.org/es/">activities
+        <p>Want to know exactly wht's going to happen? You can see the <a href="https://foundation.mozilla.org/es/">draft schedule</a> here <a href="https://foundation.mozilla.org/es/">on the Festival wiki.</a> We're still evolving the details - but the
+            general thems and style of sessions will give you a feel for what's going to happen. You can also read the <a href="https://foundation.mozilla.org/es/">activities
                 page</a> on the wiki for more detailed information.</p>
     </div>
 
@@ -173,7 +178,8 @@
             <li>Open education start ups</li>
             <li><a href="https://foundation.mozilla.org/es/">And, of course, teachers and learners of all stripes</a></li>
         </ul>
-        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="https://foundation.mozilla.org/es/">OpenEd2010</a> which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details in the coming weeks.</p>
+        <p>we're extending a <span>special invite and reduced fees to people attending</span> <a href="https://foundation.mozilla.org/es/">OpenEd2010</a> which takes place in Barecelona on the two days before the Drumbeat Festival. We'll announce details
+            in the coming weeks.</p>
     </div>
     <div class="caix" id="tweet">
         <div id="identica">
