--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -13,12 +13,21 @@
 
     <head>
         <div id="banner">
-            <img src="../recursos/bannerGim.jpg" alt="">
+
         </div>
     </head>
 
 
 
+
+    <footer>
+        <div>
+
+        </div>
+        <div>
+            <img src="../recursos/bannerGim.jpg" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
