--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -2,21 +2,33 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" href="../recursos/gim_icon.jpg">
+    <link rel="shortcut icon" href="../recursos/logotipo-brazo-de-gimnasio.png">
     <title>Calculadora de IMC-Indice de masa corporal.</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/gimstile.css" />
     <script>
     </script>
 </head>
 
 <body>
 
-    <head>
+    <header>
         <div id="banner">
 
         </div>
-    </head>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../html/home.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+    <section>
+
+
+    </section>
 
 
 
@@ -25,7 +37,7 @@
 
         </div>
         <div>
-            <img src="../recursos/bannerGim.jpg" alt="">
+
         </div>
     </footer>
 </body>
