--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -25,8 +25,13 @@
         </nav>
     </header>
 
+    <link href="fcmCalculadora2.html" rel="import" />
+
+
+
     <section>
 
+        <link id="template-file" href="fcmCalculadora2.html" rel="import" />
 
     </section>
 
