--- a/Gimnasio/html/fisioterapeuta.html
+++ b/Gimnasio/html/fisioterapeuta.html
@@ -8,41 +8,9 @@
     <script type="text/javascript" src="../js/gimnasio.js"></script>
 </head>
 
-<body onload="crearHorario()" style="width: 1000px;">
+<body onload="horarioFisio()" style="width: 1000px;">
 
-    <table border="1" id="tableAct">
-        <tr>
-            <td></td>
-            <td>Lunes</td>
-            <td>Martes</td>
-            <td>Miercoles</td>
-            <td>Jueves</td>
-            <td>Viernes</td>
-            <td>Sabado</td>
-        </tr>
-        <tr id="actividad1">
-            <td>7:00 - 9:00</td>
-        </tr>
-        <tr id="actividad2">
-            <td>9:00 - 11:00</td>
-        </tr>
-        <tr id="actividad3">
-            <td>11:00 - 13:00</td>
-        </tr>
-        <tr id="actividad4">
-            <td>13:00 - 15:00</td>
-        </tr>
-        <tr id="actividad5">
-            <td>15:00 - 17:00</td>
-        </tr>
-        <tr id="actividad6">
-            <td>17:00 - 19:00</td>
-        </tr>
-        <tr id="actividad7">
-            <td>19:00 - 21:00</td>
-        </tr>
-    </table>
-    <br><br>
+    
     <table border="1" id="tableFis">
         <tr>
             <td></td>
@@ -88,21 +56,6 @@
     </table>
     <br><br>
     <div>
-
-        <form id="form" name="formAct" style="float: left;">
-            <label for="actividad">ACTIVIDADES</label><br/>
-
-            <!-- var actividad = ["Spining", "Yoga", "Crossfit", "KickBoxing", "Baile de salón", "Kapoeira", "BodyPump"];-->
-            <input type="checkbox" name="actividad" value="Spining">Spining<br/>
-            <input type="checkbox" name="actividad" value="Yoga">Yoga<br/>
-            <input type="checkbox" name="actividad" value="Crossfit">Crossfit<br/>
-            <input type="checkbox" name="actividad" value="KickBoxing">KickBoxing<br/>
-            <input type="checkbox" name="actividad" value="Baile de salón">Baile de salón<br/>
-            <input type="checkbox" name="actividad" value="Kapoeira">Kapoeira<br/>
-            <input type="checkbox" name="actividad" value="BodyPump">BodyPump<br/>
-            <input type="button" id="boton" value="Mostrar" onclick="resAct()">
-        </form>
-        <br><br>
         <form id="formulario" name="fisio" style="float: left; margin-left: 20px;">
             <label for="fisio">FISIO:</label><br/>
             <input type="radio" name="fisio" value="Tania">Tania<br/>
