--- a/Cliente/Tareas/tarea3/ejercicio1/colegio.html
+++ b/Cliente/Tareas/tarea3/ejercicio1/colegio.html
@@ -101,6 +101,15 @@
         <input type="button" onclick="newAlumno()" value="Enviar">
     </form>
 
+    <!--Tabla para mostrar los alumnos-->
+    <table border="1" id="tablaAlumno">
+        <tr>
+            <th>DNI</th>
+            <th>Nombre</th>
+            <th>Nota media</th>
+            <th>Modificar nota</th>
+        </tr>
+    </table><br>
     <script>
     </script>
 
